PR 324 (coff_link_add_symbols): Check that the comdat pointer in the coff_section_data structure has been initialised before using it.